plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.5' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.pickbit'

    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:4.0.5"
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    repositories {
        mavenCentral()
    }

}

configure(subprojects.findAll { it.name != 'library' }) {
    apply plugin: 'org.springframework.boot'

    dependencies {
        implementation project(':library')
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.0'
        implementation 'com.github.therapi:therapi-runtime-javadoc:0.15.0'
        annotationProcessor 'com.github.therapi:therapi-runtime-javadoc-scribe:0.15.0'
    }
}
